# odpady_przodkowo

./: README.md  generate_calendars.py  pyproject.toml
data/: 2025_maslowo_nowe_tokary_otalzyno_tokarskie_pnie_tokary_warzenko.ics  2025_maslowo_nowe_tokary_otalzyno_tokarskie_pnie_tokary_warzenko_colored.ics  2025_maslowo_nowe_tokary_otalzyno_tokarskie_pnie_tokary_warzenko_plain.ics  parsed_data.py
