[project]
name = "odpady-przodkowo"
version = "0.1.0"
description = ""
authors = [
    {name = "Bartosz Dempc",email = "dempc.bartosz@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ics (>=0.7.2,<0.8.0)"
]
[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
